@@ -7,6 +7,10 @@ Legend
 Changes
 -------
 * Made Asteroids example use the CD drive better
+* Fixed a bug in which OnControlRemoved/OnControlAdded could be fired before
+  the control was actually removed from its parent's control array. This was
+  almost never a real problem, but it could cause an exception if multiple
+  modal windows were opened.
 
 2004.02.07 (beta)
 -----------------
